fixed C collapsing with 7

--- a/src/app.css
+++ b/src/app.css
@@ -63,4 +63,6 @@ button:hover {
 #c-btn {
   position: absolute;
   top: 27%;
+  right: 10%;
 }
+
